20250708-分离一下头文件和cpp文件(看看能否调试通过

--- a/src/bag_converter/CMakeLists.txt
+++ b/src/bag_converter/CMakeLists.txt
@@ -52,10 +52,11 @@ catkin_package(
 include_directories(
   ${catkin_INCLUDE_DIRS}
   ${PCL_INCLUDE_DIRS}
+  src  # 添加src目录到包含路径，这样可以找到头文件
 )
 
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable(bag_to_cloud_info_node src/bag_to_cloud_info.cpp)
+add_executable(bag_to_cloud_info_node src/main.cpp src/bag_to_cloud_info.cpp)
 target_link_libraries(bag_to_cloud_info_node ${catkin_LIBRARIES} ${PCL_LIBRARIES} ${YAML_CPP_LIBRARIES})
