--- a/src/bag_converter/package.xml
+++ b/src/bag_converter/package.xml
@@ -20,7 +20,6 @@
   <build_depend>tf2_geometry_msgs</build_depend>
   <build_depend>pcl_ros</build_depend>
   <build_depend>pcl_conversions</build_depend>
-  <build_depend>message_generation</build_depend>
   
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -45,7 +44,7 @@
   <exec_depend>tf2_geometry_msgs</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>pcl_conversions</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <!-- 移除这一行：<exec_depend>message_runtime</exec_depend> -->
 
   <export>
   </export>
